modified text colors to comply with contrast ratios

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class='flex-align-center column'>
                 <h1 class='hidden-title'>About me</h1>
                 <img alt='My picture' class='my-img' src='./assets/square.png'>
-                <p class='text landing-text'>Hello, My name is Michael and I’m a software engineer located in Colorado.  I love to code and chat with other coders. In my free time I like to run with my dog Max, code things, and play video games.  I am looking for a team to join and give my enthusiasm to. I believe in a life long learning mentality and I am passionate about being on the cutting edge of tech. If you are in the market for someone with my skills feel free to contact me.</p>
+                <p class='landing-text'>Hello, My name is Michael and I’m a software engineer located in Colorado.  I love to code and chat with other coders. In my free time I like to run with my dog Max, code things, and play video games.  I am looking for a team to join and give my enthusiasm to. I believe in a life long learning mentality and I am passionate about being on the cutting edge of tech. If you are in the market for someone with my skills feel free to contact me.</p>
                 <!-- <div class='contact-container'>
                     <a  target=“_blank” href="https://github.com/Mamckay">
                         <img class='contact-img' src='./assets/Github.png'>
@@ -91,11 +91,9 @@
                 <a aria-label="View live app for Helpful" target=“_blank” href="https://helpful-mike.herokuapp.com/">
                     <button class='project-button'>Live</button>
                 </a>
-                
                 <a aria-label="View source code for Helpful" target=“_blank” href="https://github.com/Mamckay/Helpful-Client"></a>
                     <button class='project-button'>Source</button>
                 </a>
-                
                 <h3 class='secondary-title'>What it does:</h3>
                 <p class='text'> Helpful is a platform for volunteer organizations and volunteers to connect, create and grow.</p>
                 <h3 class='secondary-title'>Tech Stack: </h3>
