--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <h3 class='secondary-title'>Tech Stack: </h3>
                 <span class='text'>Mongodb, Node.js, React, Express, Passport, Mocha/Chai</span>
             </li>
-            <li class='flex-align-center column'>
+            <li class='flex-align-center column spacer'>
                 <h2 class='title inline-flex'>Watchdog</h2>
                 <a aria-label="View a video on Watchdog" target=“_blank” href='#'>
                     <img alt='portfolio picture' class='portfolio-img' src='./assets/Watchdog.PNG'>
@@ -125,7 +125,7 @@
                 <a aria-label="View a video on Watchdog" target=“_blank” href='#'>
                     <button class='project-button'>Video</button>
                 </a>
-                <a aria-label="View source code for Watchdog" target=“_blank” href='#'>
+                <a aria-label="View source code for Watchdog" target=“_blank” href='https://github.com/Mamckay/nodecctv'>
                     <button class='project-button'>Source</button>
                 </a>
                 <h3 class='secondary-title'>What it does:</h3>
