--- a/index.html
+++ b/index.html
@@ -24,11 +24,26 @@
             <!-- <button class='portfolio-button'>Portfolio</button> -->
         </div>
         <section class='parallax'>
-            <div class='flex-align-center column'>
+            <div class='landing-container'>
                 <h1 class='hidden-title'>About me</h1>
-                <img alt='My picture' class='my-img' src='./assets/square.png'>
-                <p class='landing-text'>Hello, My name is Michael and I’m a software engineer located in Colorado.  I love to code and chat with other coders. In my free time I like to run with my dog Max, code things, and play video games.  I am looking for a team to join and give my enthusiasm to. I believe in a life long learning mentality and I am passionate about being on the cutting edge of tech. If you are in the market for someone with my skills feel free to contact me.</p>
-                <!-- <div class='contact-container'>
+                <img alt='Michael is looking at you smiling. He has a blue shirt and blazer on.' class='my-img' src='./assets/square.png'>
+                <section class='landing-text'>  
+                    <h2>About me</h2>
+                    <br>              
+                    <p>Hello, My name is Michael and I’m a software engineer located in Colorado.  I love to code and chat with other coders. In my free time I like to run with my dog Max, code things, and play video games.  I am looking for a team to join and give my enthusiasm to. I believe in a life long learning mentality and I am passionate about being on the cutting edge of tech. If you are in the market for someone with my skills feel free to contact me.</p>
+                </section>
+                <section class='landing-text'>
+                    <h2>My Hobbies</h2>
+                    <br>
+                    <ul>
+                        <li>Snowboarding</li>
+                        <li>Video games</li>
+                        <li>Coding silly things</li>
+                        <li>Working out</li>
+                        <li>Playing with my dog Max</li>
+                    </ul>
+                </section>
+                    <!-- <div class='contact-container'>
                     <a  target=“_blank” href="https://github.com/Mamckay">
                         <img class='contact-img' src='./assets/Github.png'>
                     </a>
