--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <main class='background'>
         <div class='navbar'>
             <img alt='icon' class='icon' src='./assets/icon-large.PNG'>
-            <select aria-label="Navigator" value="Navigate" name="Navigator" id='portfolio-button' >
-                <option value="home">Home</option>
-                <option value="skills">Skills</option>
-                <option value="portfolio">Portfolio</option>
+            <select aria-label="Site navigation select menu. Select the section of the site you wish to jump to." value="home" name="Navigator" id='portfolio-button' >
+                <option aria-label='Home' value="home">Home</option>
+                <option aria-label='Skills' value="skills">Skills</option>
+                <option aria-label='Portfolio' value="portfolio">Portfolio</option>
             </select>
             <!-- <button class='portfolio-button'>Portfolio</button> -->
         </div>
@@ -61,7 +61,7 @@
         </section>
         <h2 class="skills-title">Skills</h2>
         <section class='portfolio'>
-            <ul class='skills'>
+            <ul aria-label="Skills section" class='skills'>
                 <li>
                     <h3 class='secondary-title'>Front-End</h3>
                     <ul class='text'>
@@ -100,10 +100,10 @@
         <ul class='portfolio'>
             <li class='flex-align-center column spacer'>
                 <h2 class='title inline-flex'>Helpful</h2>
-                <a aria-label="View live app for Helpful" target=“_blank” href="https://helpful-mike.herokuapp.com/"></a>
+                <a aria-label="View live application for Helpful" target=“_blank” href="https://helpful-mike.herokuapp.com/"></a>
                     <img alt='portfolio picture' class='portfolio-img' src='./assets/Helpful.PNG'>
                 </a>
-                <a aria-label="View live app for Helpful" target=“_blank” href="https://helpful-mike.herokuapp.com/">
+                <a aria-label="View live application for Helpful" target=“_blank” href="https://helpful-mike.herokuapp.com/">
                     <button class='project-button'>Live</button>
                 </a>
                 <a aria-label="View source code for Helpful" target=“_blank” href="https://github.com/Mamckay/Helpful-Client"></a>
@@ -118,10 +118,10 @@
             </li>
             <li class='flex-align-center column spacer'>
                 <h2 class='title inline-flex'>Double Jump</h2>
-                <a aria-label="View live app for Double Jump" target=“_blank” href="https://doublejumps.herokuapp.com/">
+                <a aria-label="View live application for Double Jump" target=“_blank” href="https://doublejumps.herokuapp.com/">
                     <img alt='portfolio picture' class='portfolio-img' src='./assets/Doublejump.PNG'>
                 </a>
-                <a aria-label="View live app for Double Jump" target=“_blank” href="https://doublejumps.herokuapp.com/">
+                <a aria-label="View live application for Double Jump" target=“_blank” href="https://doublejumps.herokuapp.com/">
                     <button class='project-button'>Live</button>
                 </a>
                 <a aria-label="View source code for Double Jump" target=“_blank” href="https://github.com/Mamckay/Michael-DoubleJump">
@@ -144,22 +144,22 @@
                     <button class='project-button'>Source</button>
                 </a>
                 <h3 class='secondary-title'>What it does:</h3>
-                <p class='text'> Setup up your own cctv home network with Node! Watchdog is a home defense system for Node enthusiasts.</p>
+                <p class='text'> Setup your own cctv home network with Node! Watchdog is a home defense system for Node enthusiasts.</p>
                 <h3 class='secondary-title'>Tech Stack: </h3>
                 <span class='text'>Node.js, Express, Opencv, Http-server</span>
             </li>
         </ul>
         <section id='footer'>
-                <a  target=“_blank” href="https://github.com/Mamckay">
+                <a aria-label='Link to Michael Mckays Github' target=“_blank” href="https://github.com/Mamckay">
                     <img alt='github' class='footer-img' src='./assets/Github.png'>
                 </a>
-                <a  target=“_blank” href="mailto:mamckay89@gmail.com">
+                <a aria-label='Link to mail Michael Mckay' target=“_blank” href="mailto:mamckay89@gmail.com">
                     <img alt='email' class='footer-img' src='./assets/email-icon.png'>
                 </a>
-                <a  target=“_blank” href="https://www.linkedin.com/in/michaelcmckay/">
+                <a aria-label='Link to Michael Mckays linkedin profile' target=“_blank” href="https://www.linkedin.com/in/michaelcmckay/">
                     <img alt='linkedin' class='footer-img' src='./assets/linkedin.png'>
                 </a>
-                <a  target=“_blank” href="./assets/Resume.pdf">
+                <a aria-label='Link to Michael Mckays resume' target=“_blank” href="./assets/Resume.pdf">
                     <img alt='resume' class='footer-img' src='./assets/resume-icon.png'>
                 </a>
         </section>
