mobile layout update

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <a aria-label="View live application for Helpful" target=“_blank” href="https://helpful-mike.herokuapp.com/">
                     <button class='project-button'>Live</button>
                 </a>
-                <a aria-label="View source code for Helpful" target=“_blank” href="https://github.com/Mamckay/Helpful-Client"></a>
+                <a aria-label="View source code for Helpful" target=“_blank” href="https://github.com/Mamckay/Helpful-Client">
                     <button class='project-button'>Source</button>
                 </a>
                 <h3 class='secondary-title'>What it does:</h3>
