--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
                 </div> -->
             </div>    
         </section>
-        <h2 class="skills-title">Skills</h2>
+        <h2 class="skills-title">SKILLS</h2>
         <section class='portfolio'>
             <ul aria-label="Skills section" class='skills'>
                 <li>
                     <h3 class='secondary-title'>Front-End</h3>
-                    <ul class='text'>
+                    <ul class='text-left'>
                         <li><i class="fab fa-js"></i> Javascript</li>
                         <li><i class="fab fa-react"></i> React</li>
                         <li><i class="fab fa-python"></i> Python</li>
@@ -73,7 +73,7 @@
                 </li>
                 <li>
                     <h3 class='secondary-title'>Back-End</h3>
-                    <ul class='text'>
+                    <ul class='text-left'>
                             <li><i class="fas fa-database"></i> Mongodb</li>
                             <li><i class="fas fa-database"></i> SQL</li>
                             <li><i class="fas fa-database"></i> Socket.io</li>
@@ -86,7 +86,7 @@
                     </li>
                 <li>
                     <h3 class='secondary-title'>Testing/Other</h3>
-                    <ul class='text'>
+                    <ul class='text-left'>
                             <li><i class="fab fa-accessible-icon"></i> Accessibility</li>
                             <li><i class="fas fa-vial"></i> Enzyme/Jest</li>
                             <li><i class="fas fa-vial"></i> Mocha/Chai</li>
