working on video

--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
             </li>
             <li class='flex-align-center column spacer'>
                 <h2 class='title inline-flex'>Watchdog</h2>
-                <a aria-label="View a video on Watchdog" target=“_blank” href='#'>
+                <a aria-label="View a video on Watchdog" target=“_blank” href='https://youtu.be/3HBL_TV-KiY'>
                     <img alt='portfolio picture' class='portfolio-img' src='./assets/Watchdog.PNG'>
                 </a> 
-                <a aria-label="View a video on Watchdog" target=“_blank” href='#'>
+                <a aria-label="View a video on Watchdog" target=“_blank” href='https://youtu.be/3HBL_TV-KiY'>
                     <button class='project-button'>Video</button>
                 </a>
                 <a aria-label="View source code for Watchdog" target=“_blank” href='https://github.com/Mamckay/nodecctv'>
