updated the urls

--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
         <ul class='portfolio'>
             <li class='flex-align-center column spacer'>
                 <h2 class='title inline-flex'>Helpful</h2>
-                <a aria-label="View live application for Helpful" target=“_blank” href="https://helpful-mike.herokuapp.com/"></a>
+                <a aria-label="View live application for Helpful" target=“_blank” href="https://helpfull.herokuapp.com/"></a>
                     <img alt='portfolio picture' class='portfolio-img' src='./assets/Helpful.PNG'>
                 </a>
-                <a aria-label="View live application for Helpful" target=“_blank” href="https://helpful-mike.herokuapp.com/">
+                <a aria-label="View live application for Helpful" target=“_blank” href="https://helpfull.herokuapp.com/">
                     <button class='project-button'>Live</button>
                 </a>
                 <a aria-label="View source code for Helpful" target=“_blank” href="https://github.com/Mamckay/Helpful-Client">
