changing the featured projects to include Champions

--- a/index.html
+++ b/index.html
@@ -133,18 +133,18 @@
                 <span class='text'>Mongodb, Node.js, React, Express, Passport, Mocha/Chai</span>
             </li>
             <li class='flex-align-center column spacer'>
-                <h2 class='title inline-flex'>Watchdog</h2>
-                <a aria-label="View a video on Watchdog" target=“_blank” href='https://youtu.be/3HBL_TV-KiY'>
+                <h2 class='title inline-flex'>Champions</h2>
+                <a aria-label="Live link to Champions" target=“_blank” href='https://fytchampion.herokuapp.com/'>
                     <img alt='portfolio picture' class='portfolio-img' src='./assets/Watchdog.PNG'>
                 </a> 
-                <a aria-label="View a video on Watchdog" target=“_blank” href='https://youtu.be/3HBL_TV-KiY'>
-                    <button class='project-button'>Video</button>
+                <a aria-label="Live link to Champions" target=“_blank” href='https://fytchampion.herokuapp.com/'>
+                    <button class='project-button'>Live</button>
                 </a>
-                <a aria-label="View source code for Watchdog" target=“_blank” href='https://github.com/Mamckay/nodecctv'>
+                <a aria-label="View source code for Champions" target=“_blank” href='https://github.com/Mamckay/fyt-client'>
                     <button class='project-button'>Source</button>
                 </a>
                 <h3 class='secondary-title'>What it does:</h3>
-                <p class='text'> Setup your own cctv home network with Node! Watchdog is a home defense system for Node enthusiasts.</p>
+                <p class='text'> Track and set your workout goals to be a Champion! </p>
                 <h3 class='secondary-title'>Tech Stack: </h3>
                 <span class='text'>Node.js, Express, Opencv, Http-server</span>
             </li>
