new picture for projects

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <li class='flex-align-center column spacer'>
                 <h2 class='title inline-flex'>Champions</h2>
                 <a aria-label="Live link to Champions" target=“_blank” href='https://fytchampion.herokuapp.com/'>
-                    <img alt='portfolio picture' class='portfolio-img' src='./assets/Watchdog.PNG'>
+                    <img alt='portfolio picture' class='portfolio-img' src='./assets/Champions.PNG'>
                 </a> 
                 <a aria-label="Live link to Champions" target=“_blank” href='https://fytchampion.herokuapp.com/'>
                     <button class='project-button'>Live</button>
@@ -177,16 +177,6 @@
             }
         })
 
-        // var prevScrollpos = window.pageYOffset;
-        // window.onscroll = function() {
-        // var currentScrollPos = window.pageYOffset;
-        // if (currentScrollPos > window.screen.height) {
-        //     document.getElementById("footer").style.bottom = "0";
-        // } else {
-        //     document.getElementById("footer").style.bottom = `-${document.getElementById('footer').offsetHeight}px`;
-        // }
-        // prevScrollpos = currentScrollPos;
-        // }
     </script> 
 </body>
 </html>
