--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <button class='project-button'>Source</button>
                 </a>
                 <h3 class='secondary-title'>What it does:</h3>
-                <p class='text'> An E-commerce marketplace for elecronic and accesories. Uses Paypal for payment processing.</p>
+                <p class='text'> An E-commerce marketplace for elecronic and accessories.</p>
                 <h3 class='secondary-title'>Tech Stack: </h3>
                 <span class='text'>Mongodb, Node.js, React, Express, Passport, Mocha/Chai</span>
             </li>
