minor css changes to the footer

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <br>
                     <h2> My Hobbies</h2>
                     <br>
-                    <ul>
+                    <ul class='hobbies'>
                         <li>Snowboarding</li>
                         <li>Gaming</li>
                         <li>Coding</li>
