working on new design

--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
     <main class='background'>
         <nav class='navbar'>
             <img alt='icon' class='icon' src='./assets/icon-large.PNG'>
-            <div aria-label="Site navigation select menu. Select the section of the site you wish to jump to." value="home" name="Navigator" >
+            <div class='small-nav' aria-label="Site navigation select menu. Select the section of the site you wish to jump to." value="home" name="Navigator" >
                 <img alt='nav burger' className='nav-burger' src='./assets/hamburger.png' id='portfolio-button' />
+            </div>
+            <div class='big-nav'>
+                    <div class='nav-sub-big' id='big-home' aria-label='Home'>Home</div>
+                    <div class='nav-sub-big' id='big-skills' aria-label='skills'>Skills</div>
+                    <div class='nav-sub-big' id='big-portfolio' aria-label='portfolio'>Portfolio</div>
             </div>   
         </nav>
         <div id='nav-link'>
